correct template name

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 baseURL: ""
 title: PaperMod
 paginate: 5
-theme: [hugo-PaperMod]
+theme: [PaperMod]
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
